; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_output.c_print_panel_def_meta.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_output.c_print_panel_def_meta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }
%struct.TYPE_7__ = type { i32, i32 }

@conf = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@.str = private unnamed_addr constant [3 x i8] c"id\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"table\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_7__*, i32)* @print_panel_def_meta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_panel_def_meta(i32* %0, %struct.TYPE_7__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %5, align 8
  store i32 %2, i32* %6, align 4
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i8* @module_to_desc(i32 %13)
  store i8* %14, i8** %7, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i8* @module_to_head(i32 %17)
  store i8* %18, i8** %8, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i8* @module_to_id(i32 %21)
  store i8* %22, i8** %9, align 8
  store i32 0, i32* %10, align 4
  %23 = load i64, i64* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @conf, i32 0, i32 0), align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %3
  %26 = load i32, i32* %6, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %10, align 4
  br label %28

28:                                               ; preds = %25, %3
  %29 = load i32*, i32** %4, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @print_def_meta(i32* %29, i8* %30, i8* %31, i32 %32)
  %34 = load i32*, i32** %4, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = load i32, i32* %10, align 4
  %37 = call i32 @fpskeysval(i32* %34, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %35, i32 %36, i32 0)
  %38 = load i32*, i32** %4, align 8
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %10, align 4
  %43 = call i32 @fpskeyival(i32* %38, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %41, i32 %42, i32 0)
  %44 = load i32*, i32** %4, align 8
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %46 = load i32, i32* %10, align 4
  %47 = call i32 @print_def_sort(i32* %44, %struct.TYPE_7__* %45, i32 %46)
  %48 = load i32*, i32** %4, align 8
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %50 = load i32, i32* %10, align 4
  %51 = call i32 @print_def_plot(i32* %48, %struct.TYPE_7__* %49, i32 %50)
  %52 = load i32*, i32** %4, align 8
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %54 = load i32, i32* %10, align 4
  %55 = call i32 @print_def_metrics(i32* %52, %struct.TYPE_7__* %53, i32 %54)
  ret void
}

declare dso_local i8* @module_to_desc(i32) #1

declare dso_local i8* @module_to_head(i32) #1

declare dso_local i8* @module_to_id(i32) #1

declare dso_local i32 @print_def_meta(i32*, i8*, i8*, i32) #1

declare dso_local i32 @fpskeysval(i32*, i8*, i8*, i32, i32) #1

declare dso_local i32 @fpskeyival(i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @print_def_sort(i32*, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @print_def_plot(i32*, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @print_def_metrics(i32*, %struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
